# Drona-InterIIT23

./: .gitignore  LICENSE  README.md  Trial_PID.py  approximatetimesync.py  autoPluto.py  autoPluto_carrot.py  autoPlutoold.py  auto_pluto_copy.py  camera_correction.py  conf.py  config.yaml  debug.csv  debug.txt  demo_run.py  fake_autoPluto.py  fake_plot.py  include2py.py  ip.py  latency.txt  original.py  originalv2.py  output.txt  package-lock.json  plot.py  plot_csv.py  pluto_pid_controller.py  requirements.txt  semiautopluto.py  send_pr.txt  send_pr2.txt  swarmPluto.py  task2_pid.py  task2_run.py  task3_run.py  telnet.sh  vision_config.yaml  vision_data.csv  vision_debug.csv  vision_test.py
EKF/: QuadrotorDynamics.py  kalman_filter_v2.py
MSP_comms/: app.py  comms.py  debug.txt  debug1.txt  disarm.py  fallSafeScript.py  fileHandler.py  keyMapping.py  land.py  old.py  oldtest.py  (+6 more)
POSEtransform/ros_env[wip]/src/gazebo_world_description/: CMakeLists.txt  package.xml
POSEtransform/ros_env[wip]/src/gazebo_world_description/config/: gz_bridge.yaml
POSEtransform/ros_env[wip]/src/gazebo_world_description/launch/: gazebo.launch.py
POSEtransform/ros_env[wip]/src/gazebo_world_description/models/aruco/: model.config  model.sdf
POSEtransform/ros_env[wip]/src/gazebo_world_description/models/aruco6/: model.config  model.sdf
POSEtransform/ros_env[wip]/src/gazebo_world_description/models/aruco6/meshes/: aruco6.mtl
POSEtransform/ros_env[wip]/src/gazebo_world_description/scripts/: image_sub.py
POSEtransform/ros_env[wip]/src/gazebo_world_description/world/: world.sdf
(+607 files in other folders)
